# prometheus-givenergy

./: GivEnergy-modbus-API.md  README.md  build-for-fedora.sh  build.sh  pyproject.toml  test.sh
src/prometheus_givenergy/: __init__.py  __main__.py  prometheus.py  register.py
