[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "prometheus-givenergy"
authors = [
    {name = "Barry Scott", email = "barry@barrys-emacs.org"},
]
description = "prometheus exporter for GivEnergy inverter metrics."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = [ "development" ]
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pymodbus",
    "crccheck",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "prometheus_givenergy.VERSION"}

[project.optional-dependencies]

[project.scripts]
prometheus-givenergy = "prometheus_givenergy.__main__:main"

[project.urls]
"Homepage" = "https://github.com/barry-scott/prometheus_givenergy"
"Bug Tracker" = "https://github.com/barry-scott/prometheus_givenergy/issues"
